--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Sur ce site, je vous présente les différentes raisons 
     de différentes personnes, bien évidemment avec leurs accords à l'écrit. Vous pouvez retrouvez ci-dessous plusieurs boutons, pouvant accéder aux explications de différentes personnes ou bien les mentions légales. (site fini en 29:38:44 ! (1 jour et demi))</p>
   <div class="menu">
-    <a href="accueil.html"><button class="menu-btn">Accueil</button></a>
+    <a href="index.html"><button class="menu-btn">Accueil</button></a>
     <a href="yaniss.html"><button class="menu-btn">Yaniss (spécial édition)</button></a>
     <a href="tommy.html"><button class="menu-btn">Tommy</button></a>
     <a href="ml.html"><button class="menu-btn">Mentions légales</button></a>
