--- a/ml.html
+++ b/ml.html
@@ -9,7 +9,7 @@
   <p class="h1">LES MENTIONS LEGALES 📜</p>
   <p class="paragraphedebz">Les personnes présentes sur le site, on a reçu leurs accords à l'écrit, et ce site est fait à but humouristique et non portant atteinte à la dignité de qui que ce sois. Ce site est développé par Alfaa.</p>
   <div class="menu">
-    <a href="accueil.html"><button class="menu-btn">Accueil</button></a>
+    <a href="index.html"><button class="menu-btn">Accueil</button></a>
     </div>
 </head>
 <body>
