--- a/yaniss.html
+++ b/yaniss.html
@@ -17,7 +17,7 @@
   <p class="p">・Cinquièmement, il se pignouf sur des pixels de e-girl sur Sayonara.</p>
   <p class="p">・Et pour finir en toute beauté et gentille, ce mec est un véritable beaugosse</p>
   <div class="menu">
-    <a href="accueil.html"><button class="menu-btn">Accueil</button></a>
+    <a href="index.html"><button class="menu-btn">Accueil</button></a>
     <a href="tommy.html"><button class="menu-btn">Tommy</button></a>
     <a href="ml.html"><button class="menu-btn">Mentions légales</button></a>
     </div>
