--- a/404.html
+++ b/404.html
@@ -13,4 +13,8 @@
     <a href="tommy.html"><button class="menu-btn">Tommy</button></a>
     <a href="ml.html"><button class="menu-btn">Mentions légales</button></a>
     </div>
+<body>
+  <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
+  <body style="background-color:#000000;">
+  </body>
 </html>
