--- a/yaniss.html
+++ b/yaniss.html
@@ -10,11 +10,11 @@
 
   <body style="background-color:#000000;">
   <p class="h1">POURQUOI YANISS est un FILS DE PUTE ?</p>
-  <p class="tktrohya">・Premièrement, il mange sa merde.</p>
-  <p class="p">・Deuxièmement, il rage sur valorant.</p>
-  <p class="p">・Troisièmement, il fais caca à l'envers.</p>
+  <p class="tktrohya">・Premièrement, il mange son gros caca en cam shibuya</p>
+  <p class="p">・Deuxièmement, il rage sur valorant à cause des smurfs</p>
+  <p class="p">・Troisièmement, il fais caca sans s'essuyer les fesses (c réel jt l'oxygène)</p>
   <p class="p">・Quatrièrement, c'est un slasheur2mammouth (nan ça heureusement 🙏)</p>
-  <p class="p">・Cinquièmement, il se pignouf sur des pixels de e-girl sur Sayonara.</p>
+  <p class="p">・Cinquièmement, il se pignouf sur des pixels de e-girl sur Sayonara (jt la egirl)</p>
   <p class="p">・Et pour finir en toute beauté et gentille, ce mec est un véritable beaugosse</p>
   <div class="menu">
     <a href="index.html"><button class="menu-btn">Accueil</button></a>
