--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <title>POURQUOI C'EST DES TDC ?</title>
   <link rel="stylesheet" href="accueil.css">
   <img class="logodelamort" src="id-card.png">
-  <p class="paragraphedebz">La page est introuvable..</p>
+  <p class="paragraphedebz">Erreur 404 : La page est introuvable</p>
   <div class="menu">
     <a href="index.html"><button class="menu-btn">Accueil</button></a>
     <a href="yaniss.html"><button class="menu-btn">Yaniss (spécial édition)</button></a>
