--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+ <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Ajouter Font Awesome pour l'icône GitHub -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
 <head>
   <title>POURQUOI C'EST DES TDC ?</title>
@@ -17,6 +22,9 @@
     </div>
 </head>
 <body>
+    <a href="https://github.com/ton-utilisateur" target="_blank">
+        <i class="fab fa-github" style="font-size: 50px;"></i>
+    </a>
   <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
   <body style="background-color:#000000;">
   </body>
