--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <a href="https://github.com/ton-utilisateur" target="_blank">
-        <i class="fab fa-github" style="font-size: 50px;"></i>
+        <i class="fab fa-github" style="font-size: 50px;"> =style margin-top: 30px</i>
     </a>
   <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
   <body style="background-color:#000000;">
