--- a/tommy.html
+++ b/tommy.html
@@ -10,9 +10,10 @@
 
   <body style="background-color:#000000;">
   <p class="h1">POURQUOI Tommy est un FILS DE PUTE ?</p>
-  <p class="paragraphedebz">・Premièrement, il mange son gros caca en cam shibuya<br />
-  caca<br />
-caca<br /></p>
+  <p class="paragraphedebz">・Premièrement, il est fondateur de +2télé (redflag chez un mec)<br />
+                            ・Deuxièmement, il est en bac pro ciel (sale modo)<br />
+                            ・Troisièmement, il s'est déjà mastiquer la bistouquette sur son chien<br />
+
   <div class="menu">
     <a href="index.html"><button class="menu-btn">Accueil</button></a>
     <a href="yaniss.html"><button class="menu-btn">Yaniss</button></a>
