--- a/tommy.html
+++ b/tommy.html
@@ -10,9 +10,11 @@
 
   <body style="background-color:#000000;">
   <p class="h1">POURQUOI Tommy est un FILS DE PUTE ?</p>
-  <p class="paragraphedebz">・Premièrement, il est fondateur de +2télé (redflag chez un mec)<br />
-                            ・Deuxièmement, il est en bac pro ciel (sale modo)<br />
-                            ・Troisièmement, il s'est déjà mastiquer la bistouquette sur son chien<br />
+  <p class="paragraphedebz">・Premièrement, il est fondateur de +2télé (redflag chez un mec)<br/>
+                            ・Deuxièmement, il est en bac pro ciel (sale modo)<br/>
+                            ・Troisièmement, il s'est branler sur son chien<br/>
+                            ・Quatrièrement, il m'a volé mon ex (sale tana)<br/>
+                            ・Cinquiètement, il est chez l'hébergeur LWS.<br/>
 
   <div class="menu">
     <a href="index.html"><button class="menu-btn">Accueil</button></a>
