--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     </div>
 </head>
 <body>
+<style>body {
+ 
+ background-image: url('windows.jpg');
+
+}
+</style>
   <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
   <body style="background-color:#000000;">
   </body>
