--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
  
  background-image: url('windows.jpg');
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: center;
 
 }
 </style>
