--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  background-image: url('windows.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: center;
+  background-size: cover;
 
 }
 </style>
