--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     </div>
 </head>
 <body>
-<style>body {
- 
- background-image: url('windows.jpg');
+<style class="arriereplan">body {
+  
+  background-image: url('windows.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 
-}
-</style>
+  }
+  </style>
   <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
   <body style="background-color:#000000;">
   </body>
