--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 </head>
 <body>
-<style class="arriereplan">body {
+  <div class="arriereplan">
   
   background-image: url('windows.jpg');
   background-repeat: no-repeat;
@@ -24,8 +24,8 @@
   background-size: cover;
 
   }
-  </style>
   <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
   <body style="background-color:#000000;">
+  </div>
   </body>
 </html>
