--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-<head>
+<head>  
   <title>POURQUOI C'EST DES TDC ?</title>
   <link rel="stylesheet" href="accueil.css">
   <img class="logodelamort" src="id-card.png">
@@ -15,8 +15,8 @@
     <a href="ml.html"><button class="menu-btn">Mentions légales</button></a>
     </div>
 </head>
+<div class="arriereplan">
 <body>
-  <div class="arriereplan">
   
   background-image: url('windows.jpg');
   background-repeat: no-repeat;
@@ -28,4 +28,5 @@
   <body style="background-color:#000000;">
   </div>
   </body>
+</div>
 </html>
