--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 <head>  
-  <div class="arriereplan">
   <title>POURQUOI C'EST DES TDC ?</title>
   <link rel="stylesheet" href="accueil.css">
   <img class="logodelamort" src="id-card.png">
@@ -15,8 +14,19 @@
     <a href="tommy.html"><button class="menu-btn">Tommy</button></a>
     <a href="ml.html"><button class="menu-btn">Mentions légales</button></a>
   </div>
-    </div>
 </head>
+  <div style="
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('windows.jpg');
+    background-size: cover;
+    background-position: center;
+    filter: blur(10px); /* Applique un flou de 10px */
+    z-index: -1; /* Place l'arrière-plan en dessous du contenu */
+  "></div>
 <body>
   
   background-image: url('windows.jpg');
