--- a/index.html
+++ b/index.html
@@ -24,17 +24,10 @@
     background-image: url('windows.jpg');
     background-size: cover;
     background-position: center;
-    filter: blur(10px); /* Applique un flou de 10px */
-    z-index: -1; /* Place l'arrière-plan en dessous du contenu */
+    filter: blur(10px);
+    z-index: -1;
   "></div>
 <body>
-  
-  background-image: url('windows.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-
-  }
   <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
   <body style="background-color:#000000;">
   </div>
