--- a/index.html
+++ b/index.html
@@ -15,18 +15,7 @@
     <a href="ml.html"><button class="menu-btn">Mentions légales</button></a>
   </div>
 </head>
-  <div style="
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('windows.jpg');
-    background-size: cover;
-    background-position: center;
-    filter: blur(10px);
-    z-index: -1;
-  "></div>
+  <div class="arriereplan"></div>
 <body>
   <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
   <body style="background-color:#000000;">
