--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="ml.html"><button class="menu-btn">Mentions légales</button></a>
   </div>
 </head>
-  <div class="arriereplan"></div>
+  <style><div class="arriereplan"></div></style>
 <body>
   <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
   <body style="background-color:#000000;">
