--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <a href="ml.html"><button class="menu-btn">Mentions légales</button></a>
   </div>
 </head>
-  <style><div class="arriereplan"></div></style>
 <body>
+  <div class="arriereplan"></div>
   <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
   <body style="background-color:#000000;">
   </div>
