--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>POURQUOI C'EST DES TDC ?</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="accueil.css">
-</head>
-<body>
-  <!-- Arrière-plan flouté -->
-  <div class="arriereplan"></div>
 
-  <!-- Contenu principal -->
+</head>
+
+<body>
+
+  <div class="arriereplan"></div>
   <div class="contenu">
     <img class="logodelamort" src="id-card.png" alt="Logo">
-    <p class="paragraphedebz">
+
+    <p class="paragraphedebz" style="backdrop-filter: blur(10px)"> 
       On se demande généralement, pourquoi certaines personnes sont des énormes enculé(e)s ? 
       Sur ce site, je vous présente les différentes raisons de différentes personnes, bien évidemment avec leurs accords à l'écrit. Vous pouvez retrouvez ci-dessous plusieurs boutons, pouvant accéder aux explications de différentes personnes ou bien les mentions légales. (site fini en 29:38:44 ! (1 jour et demi))
     </p>
+
     <div class="menu">
       <a href="index.html"><button class="menu-btn">Accueil</button></a>
       <a href="yaniss.html"><button class="menu-btn">Yaniss</button></a>
@@ -26,9 +29,10 @@
     </div>
   </div>
 
-  <!-- Footer -->
   <footer class="footer">
     Pourquoi c'est des tdc ? - © 2025-2026
   </footer>
+
 </body>
+
 </html>
