--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <div class="contenu">
     <img class="logodelamort" src="id-card.png" alt="Logo">
 
-    <p class="paragraphedebz" style="backdrop-filter: blur(10px)"> 
+    <div class="paragraphedebz" style="backdrop-filter: blur(10px)"> 
       On se demande généralement, pourquoi certaines personnes sont des énormes enculé(e)s ? 
       Sur ce site, je vous présente les différentes raisons de différentes personnes, bien évidemment avec leurs accords à l'écrit. Vous pouvez retrouvez ci-dessous plusieurs boutons, pouvant accéder aux explications de différentes personnes ou bien les mentions légales. (site fini en 29:38:44 ! (1 jour et demi))
-    </p>
+    </div>
 
     <div class="menu">
       <a href="index.html"><button class="menu-btn">Accueil</button></a>
