--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="contenu">
     <img class="logodelamort" src="id-card.png" alt="Logo">
 
-    <div class="paragraphedebz" style="backdrop-filter: blur(10px)"> 
+    <div class="paragraphedebz"> 
       On se demande généralement, pourquoi certaines personnes sont des énormes enculé(e)s ? 
       Sur ce site, je vous présente les différentes raisons de différentes personnes, bien évidemment avec leurs accords à l'écrit. Vous pouvez retrouvez ci-dessous plusieurs boutons, pouvant accéder aux explications de différentes personnes ou bien les mentions légales. (site fini en 29:38:44 ! (1 jour et demi))
     </div>
