--- a/tommy.html
+++ b/tommy.html
@@ -8,10 +8,10 @@
   <img class="logodelamort" src="id-card.png">
 </head>
 <body>
-
-  <body style="background-color:#000000;">
-  <p class="h1">POURQUOI Tommy est un FILS DE PUTE ?</p>
-  <p class="paragraphedebz">・Premièrement, il est fondateur de +2télé (redflag chez un mec)<br/>
+  
+  <div class="arriereplan"></div>
+  <div class="h1">POURQUOI Tommy est un FILS DE PUTE ?</p>
+  <div class="paragraphedebz">・Premièrement, il est fondateur de +2télé (redflag chez un mec)<br/>
                             ・Deuxièmement, il est en bac pro ciel (sale modo)<br/>
                             ・Troisièmement, il s'est branler sur son chien<br/>
                             ・Quatrièrement, il m'a volé mon ex (sale tana)<br/>
