--- a/tommy.html
+++ b/tommy.html
@@ -10,7 +10,7 @@
 <body>
   
   <div class="arriereplan"></div>
-  <div class="h1">POURQUOI Tommy est un FILS DE PUTE ?</p>
+  <h1 class="h1">POURQUOI Tommy est un FILS DE PUTE ?</p>
   <div class="paragraphedebz">・Premièrement, il est fondateur de +2télé (redflag chez un mec)<br/>
                             ・Deuxièmement, il est en bac pro ciel (sale modo)<br/>
                             ・Troisièmement, il s'est branler sur son chien<br/>
