--- a/tommy.html
+++ b/tommy.html
@@ -5,23 +5,24 @@
 <head>
   <title>Présentation - Tommy</title>
   <link rel="stylesheet" href="tommy.css">
-  <img class="logodelamort" src="id-card.png">
+  <img class="logodelamort" src="id-card.png" alt="Logo">
 </head>
 <body>
-  
   <div class="arriereplan"></div>
-  <h1 class="h1">POURQUOI Tommy est un FILS DE PUTE ?</p>
-  <div class="paragraphedebz">・Premièrement, il est fondateur de +2télé (redflag chez un mec)<br/>
-                            ・Deuxièmement, il est en bac pro ciel (sale modo)<br/>
-                            ・Troisièmement, il s'est branler sur son chien<br/>
-                            ・Quatrièrement, il m'a volé mon ex (sale tana)<br/>
-                            ・Cinquiètement, il est chez l'hébergeur LWS.<br/>
+  <h1 class="h1">POURQUOI Tommy est un FILS DE PUTE ?</h1>
+  <div class="paragraphedebz">
+    ・Premièrement, il est fondateur de +2télé (redflag chez un mec)<br/>
+    ・Deuxièmement, il est en bac pro ciel (sale modo)<br/>
+    ・Troisièmement, il s'est branler sur son chien<br/>
+    ・Quatrièrement, il m'a volé mon ex (sale tana)<br/>
+    ・Cinquiètement, il est chez l'hébergeur LWS.
+  </div>
 
   <div class="menu">
     <a href="index.html"><button class="menu-btn">Accueil</button></a>
     <a href="yaniss.html"><button class="menu-btn">Yaniss</button></a>
     <a href="ml.html"><button class="menu-btn">Mentions légales</button></a>
-    </div>
-    <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
-  </body>
+  </div>
+  <footer class="footer">Pourquoi c'est des tdc ? - © 2025-2026</footer>
+</body>
 </html>
